2009-06-16  Jose Dapena Paz  <jdapena@igalia.com>

	* New libtinymail-camel/tny-camel-html-to-text-stream.[ch]:
	new stream that wraps a stream with html format, so its output
	is a plain text version of that stream.

2009-06-15  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymail-camel/tny-camel-send-queue.c (check_cancel): call
	tny_camel_send_queue_cancel_default instead of the interface
	function in order to prevent call loops when applications want to
	subclass TnyCamelSendQueue

2009-06-12  Jose Dapena Paz  <jdapena@igalia.com>

	* libtinymail-camel/tny-camel-store-account.c. New method
	_tny_camel_store_account_refresh_children. This is used for
	checking to recurse folders for knowing if there are new
	folders available.

	* libtinymailui-gtk/tny-gtk-folder-list-store.[ch]: implemented new
	"delayed refresh" flag. This is for telling store to act as
	offline in first seconds, but then do an online refresh. With this
	we get immediate view of cached folders, but after a while we get
	a network access so we see new folders.

2009-06-11  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymail-maemo/tny-maemo-conic-device.c (handle_connect)
	(on_connection_event, tny_maemo_conic_device_connect_async)
	(tny_maemo_conic_device_instance_init)
	(tny_maemo_conic_device_finalize): Now the maemo conic device
	supports multiple requests for connections

2009-06-10  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymail-camel/tny-session-camel.c (on_account_connect_done):
	Fixed a regression added in r3926

	* libtinymail-camel/tny-camel-folder.c
	(_tny_camel_folder_freeup_observers): protect the access to the
	observers list when freeing it

2009-06-08  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymail-gnomevfs/tny-vfs-stream.c (tny_vfs_stream_write):
	return -1 in case of error which is the value that CamelStream
	understands as error.

2009-06-04  Sergio Villar Senin  <svillar@igalia.com>
