@@ -1,3 +1,11 @@
+2009-06-19  Jose Dapena Paz  <jdapena@igalia.com>
+
+	* libtinymailui-gtk/tny-gtk-folder-list-store.c: delay refresh
+	not only on adding accounts, but on each step of get folders
+	operation. Also removing the delayed refresh on connection event
+	is now disabled, as we usually get hte connection event too 
+	soon.
+
 2009-06-16  Jose Dapena Paz  <jdapena@igalia.com>
 
 	* New libtinymail-camel/tny-camel-html-to-text-stream.[ch]:
